crates/kotlin-syntax/tests/snapshots/parser_snapshots__parse_interface.snap
---
source: crates/kotlin-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
interface Repository<T> {
    fun find(id: Int): T?
    fun save(value: T)
}

TOKENS:
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "Repository"
LESS "<"
IDENTIFIER "T"
GREATER ">"
WHITESPACE " "
L_BRACE "{"
NEWLINE "\n"
WHITESPACE "    "
FUN_KW "fun"
WHITESPACE " "
IDENTIFIER "find"
L_PAREN "("
IDENTIFIER "id"
COLON ":"
WHITESPACE " "
IDENTIFIER "Int"
R_PAREN ")"
COLON ":"
WHITESPACE " "
IDENTIFIER "T"
QUESTION "?"
NEWLINE "\n"
WHITESPACE "    "
FUN_KW "fun"
WHITESPACE " "
IDENTIFIER "save"
L_PAREN "("
IDENTIFIER "value"
COLON ":"
WHITESPACE " "
IDENTIFIER "T"
R_PAREN ")"
NEWLINE "\n"
R_BRACE "}"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..77
  IMPORT_LIST@0..0
  CLASS_DECL@0..76
    INTERFACE_KW@0..9 "interface"
    WHITESPACE@9..10 " "
    IDENTIFIER@10..20 "Repository"
    TYPE_PARAMETERS@20..23
      LESS@20..21 "<"
      TYPE_PARAMETER@21..22
        IDENTIFIER@21..22 "T"
      GREATER@22..23 ">"
    WHITESPACE@23..24 " "
    CLASS_BODY@24..76
      L_BRACE@24..25 "{"
      NEWLINE@25..26 "\n"
      WHITESPACE@26..30 "    "
      FUNCTION_DECL@30..52
        FUN_KW@30..33 "fun"
        WHITESPACE@33..34 " "
        IDENTIFIER@34..38 "find"
        VALUE_PARAMETERS@38..47
          L_PAREN@38..39 "("
          VALUE_PARAMETER@39..46
            IDENTIFIER@39..41 "id"
            COLON@41..42 ":"
            WHITESPACE@42..43 " "
            TYPE@43..46
              USER_TYPE@43..46
                IDENTIFIER@43..46 "Int"
          R_PAREN@46..47 ")"
        COLON@47..48 ":"
        WHITESPACE@48..49 " "
        NULLABLE_TYPE@49..51
          USER_TYPE@49..50
            IDENTIFIER@49..50 "T"
          QUESTION@50..51 "?"
        NEWLINE@51..52 "\n"
      WHITESPACE@52..56 "    "
      FUNCTION_DECL@56..75
        FUN_KW@56..59 "fun"
        WHITESPACE@59..60 " "
        IDENTIFIER@60..64 "save"
        VALUE_PARAMETERS@64..74
          L_PAREN@64..65 "("
          VALUE_PARAMETER@65..73
            IDENTIFIER@65..70 "value"
            COLON@70..71 ":"
            WHITESPACE@71..72 " "
            TYPE@72..73
              USER_TYPE@72..73
                IDENTIFIER@72..73 "T"
          R_PAREN@73..74 ")"
        NEWLINE@74..75 "\n"
      R_BRACE@75..76 "}"
  NEWLINE@76..77 "\n"
