crates/kotlin-syntax/tests/snapshots/parser_snapshots__parse_multiple_file_annotations.snap
---
source: crates/kotlin-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
@file:Suppress("UNUSED")
@file:[JvmMultifileClass Foo Bar]
package com.example

TOKENS:
AT "@"
IDENTIFIER "file"
COLON ":"
IDENTIFIER "Suppress"
L_PAREN "("
OPEN_QUOTE "\""
STRING_CONTENT "UNUSED"
CLOSE_QUOTE "\""
R_PAREN ")"
NEWLINE "\n"
AT "@"
IDENTIFIER "file"
COLON ":"
L_BRACKET "["
IDENTIFIER "JvmMultifileClass"
WHITESPACE " "
IDENTIFIER "Foo"
WHITESPACE " "
IDENTIFIER "Bar"
R_BRACKET "]"
NEWLINE "\n"
PACKAGE_KW "package"
WHITESPACE " "
IDENTIFIER "com"
DOT "."
IDENTIFIER "example"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..79
  FILE_ANNOTATION@0..25
    AT@0..1 "@"
    ANNOTATION_USE_SITE_TARGET@1..6
      IDENTIFIER@1..5 "file"
      COLON@5..6 ":"
    USER_TYPE@6..14
      IDENTIFIER@6..14 "Suppress"
    VALUE_ARGUMENTS@14..24
      L_PAREN@14..15 "("
      VALUE_ARGUMENT@15..23
        STRING_LITERAL@15..23
          OPEN_QUOTE@15..16 "\""
          STRING_CONTENT@16..22 "UNUSED"
          CLOSE_QUOTE@22..23 "\""
      R_PAREN@23..24 ")"
    NEWLINE@24..25 "\n"
  FILE_ANNOTATION@25..59
    AT@25..26 "@"
    ANNOTATION_USE_SITE_TARGET@26..31
      IDENTIFIER@26..30 "file"
      COLON@30..31 ":"
    L_BRACKET@31..32 "["
    USER_TYPE@32..49
      IDENTIFIER@32..49 "JvmMultifileClass"
    WHITESPACE@49..50 " "
    USER_TYPE@50..53
      IDENTIFIER@50..53 "Foo"
    WHITESPACE@53..54 " "
    USER_TYPE@54..57
      IDENTIFIER@54..57 "Bar"
    R_BRACKET@57..58 "]"
    NEWLINE@58..59 "\n"
  PACKAGE_HEADER@59..79
    PACKAGE_KW@59..66 "package"
    WHITESPACE@66..67 " "
    QUALIFIED_NAME@67..78
      IDENTIFIER@67..70 "com"
      DOT@70..71 "."
      IDENTIFIER@71..78 "example"
    NEWLINE@78..79 "\n"
  IMPORT_LIST@79..79
